--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>4epuBank</title>
 </head>
 
-<body>
+<body class="BodyBackground">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
